--- a/package.json
+++ b/package.json
@@ -9,14 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.8",
+    "@heroicons/react": "^2.0.14",
+    "@material-tailwind/react": "^1.2.5",
+    "@next/font": "13.1.5",
+    "@react-google-maps/api": "^2.18.1",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "cookie": "^0.5.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "net": "^1.0.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
+    "swr": "^2.0.3",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "@types/cookie": "^0.5.1",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
