--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.8",
     "@heroicons/react": "^2.0.14",
+    "@iconify/icons-mdi": "^1.2.44",
+    "@iconify/react": "^4.1.0",
     "@material-tailwind/react": "^1.2.5",
     "@next/font": "13.1.5",
     "@react-google-maps/api": "^2.18.1",
